--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,6 +2,7 @@
 <resources>
 
     <style name="Buttons">
+        <item name="android:foreground">?attr/selectableItemBackground</item>
         <item name="android:backgroundTint">#2D0745</item>
         <item name="android:elegantTextHeight">true</item>
         <item name="android:orientation">vertical</item>
@@ -17,23 +18,27 @@
         <item name="android:layout_marginEnd">2dp</item>
         <item name="android:layout_marginTop">0dp</item>
         <item name="android:layout_marginBottom">0dp</item>
+        <item name="android:theme">@style/SelectableItemTheme</item>
     </style>
 
     <style name="ImageButton">
-        <item name="android:backgroundTintMode">src_over</item>
+        <item name="android:foreground">?attr/selectableItemBackgroundBorderless</item>
+        <item name="android:theme">@style/SelectableItemTheme</item>
         <item name="android:backgroundTint">#2D0745</item>
-        <item name="android:foregroundTint">#E9E773</item>
         <item name="android:tint">#E9E773</item>
         <item name="android:padding">0dp</item>
         <item name="android:paddingBottom">0dp</item>
         <item name="android:paddingLeft">0dp</item>
         <item name="android:paddingRight">0dp</item>
         <item name="android:paddingTop">0dp</item>
-        <item name="android:drawablePadding">2dp</item>
         <item name="android:layout_marginLeft">2dp</item>
         <item name="android:layout_marginRight">2dp</item>
         <item name="android:layout_marginTop">0dp</item>
         <item name="android:layout_marginBottom">0dp</item>
         <item name="android:scaleType">fitCenter</item>
     </style>
+    <style name="SelectableItemTheme">
+        <item name="android:colorControlHighlight">#99958D42</item>
+    </style>
+
 </resources>
