--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:tools="http://schemas.android.com/tools">
+
+    <data>
+        <variable
+            name="viewModel"
+            type="com.magnalleexample.geekbrainsandroid1_2.MainActivityViewModel" />
+    </data>
+<androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#C0A1D3"
@@ -93,28 +100,40 @@
         app:layout_constraintTop_toBottomOf="@+id/viewResult" />
 
     <TextView
-        android:id="@+id/viewResult"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:id="@+id/viewHistory"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
+        android:gravity="center"
+        android:textColor="#43431A"
+        android:textAlignment="gravity"
+        android:textSize="14sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text = "history" />
+
+    <TextView
+        android:id="@+id/viewResult"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:background="?android:attr/galleryItemBackground"
         android:backgroundTint="#2D0745"
         android:backgroundTintMode="add"
         android:elegantTextHeight="true"
         android:gravity="center"
         android:padding="8dp"
-        android:text="Result"
-        android:textColor="#E9E773"
         android:textAlignment="gravity"
+        android:textColor="#E9E773"
         android:textIsSelectable="true"
-        android:textSize="44sp"
+        android:textSize="@dimen/resultViewTextSize"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@id/guidelineH1"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/viewHistory" />
 
     <Button
         android:id="@+id/buttonMC"
@@ -246,6 +265,7 @@
 
         android:orientation="vertical"
         android:text="1"
+        android:onClick="@{() -> viewModel.inputNumber('1')}"
         app:layout_constraintBottom_toBottomOf="@+id/guidelineH6"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="@+id/guidelineV1"
@@ -260,6 +280,7 @@
 
         android:orientation="vertical"
         android:text="2"
+        android:onClick="@{() -> viewModel.inputNumber('2')}"
         app:layout_constraintBottom_toBottomOf="@+id/guidelineH6"
         app:layout_constraintLeft_toLeftOf="@+id/guidelineV1"
         app:layout_constraintRight_toRightOf="@+id/guidelineV2"
@@ -273,6 +294,7 @@
 
         android:orientation="vertical"
         android:text="3"
+        android:onClick="@{() -> viewModel.inputNumber('3')}"
         app:layout_constraintBottom_toBottomOf="@+id/guidelineH6"
         app:layout_constraintLeft_toLeftOf="@+id/guidelineV2"
         app:layout_constraintRight_toRightOf="@+id/guidelineV3"
@@ -299,6 +321,7 @@
 
         android:orientation="vertical"
         android:text="4"
+        android:onClick="@{() -> viewModel.inputNumber('4')}"
         app:layout_constraintBottom_toBottomOf="@+id/guidelineH7"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="@+id/guidelineV1"
@@ -313,6 +336,7 @@
 
         android:orientation="vertical"
         android:text="5"
+        android:onClick="@{() -> viewModel.inputNumber('5')}"
         app:layout_constraintBottom_toBottomOf="@+id/guidelineH7"
         app:layout_constraintLeft_toLeftOf="@+id/guidelineV1"
         app:layout_constraintRight_toRightOf="@+id/guidelineV2"
@@ -326,6 +350,7 @@
 
         android:orientation="vertical"
         android:text="6"
+        android:onClick="@{() -> viewModel.inputNumber('6')}"
         app:layout_constraintBottom_toBottomOf="@+id/guidelineH7"
         app:layout_constraintLeft_toLeftOf="@+id/guidelineV2"
         app:layout_constraintRight_toRightOf="@+id/guidelineV3"
@@ -352,6 +377,7 @@
 
         android:orientation="vertical"
         android:text="7"
+        android:onClick="@{() -> viewModel.inputNumber('7')}"
         app:layout_constraintBottom_toBottomOf="@+id/guidelineH8"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="@+id/guidelineV1"
@@ -366,6 +392,7 @@
 
         android:orientation="vertical"
         android:text="8"
+        android:onClick="@{() -> viewModel.inputNumber('8')}"
         app:layout_constraintBottom_toBottomOf="@+id/guidelineH8"
         app:layout_constraintLeft_toLeftOf="@+id/guidelineV1"
         app:layout_constraintRight_toRightOf="@+id/guidelineV2"
@@ -379,6 +406,7 @@
 
         android:orientation="vertical"
         android:text="9"
+        android:onClick="@{() -> viewModel.inputNumber('9')}"
         app:layout_constraintBottom_toBottomOf="@+id/guidelineH8"
         app:layout_constraintLeft_toLeftOf="@+id/guidelineV2"
         app:layout_constraintRight_toRightOf="@+id/guidelineV3"
@@ -392,6 +420,7 @@
 
         android:orientation="vertical"
         android:text="="
+        android:onClick="@{() -> viewModel.equals()}"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.466"
         app:layout_constraintLeft_toLeftOf="@+id/guidelineV3"
@@ -407,6 +436,7 @@
 
         android:orientation="vertical"
         android:text="0"
+        android:onClick="@{() -> viewModel.inputNumber('0')}"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="@+id/guidelineV2"
@@ -420,10 +450,13 @@
 
         android:orientation="vertical"
         android:text=","
+        android:onClick="@{() -> viewModel.inputNumber(',')}"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintLeft_toLeftOf="@+id/guidelineV2"
         app:layout_constraintRight_toRightOf="@+id/guidelineV3"
-        app:layout_constraintTop_toBottomOf="@+id/guidelineH8" />
+        app:layout_constraintTop_toBottomOf="@+id/guidelineH8"
+        app:layout_constraintVertical_bias="0.0" />
 
     <androidx.appcompat.widget.AppCompatImageButton
         android:id="@+id/buttonERASE"
@@ -446,6 +479,7 @@
 
         android:orientation="vertical"
         android:text="CE"
+        android:onClick="@{() -> viewModel.clearInput()}"
         app:layout_constraintBottom_toBottomOf="@+id/guidelineH3"
         app:layout_constraintLeft_toLeftOf="@+id/guidelineV3"
         app:layout_constraintRight_toRightOf="parent"
@@ -453,3 +487,4 @@
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
